# thesslink-rl-v1

./: .gitignore  README.md  analysis.py  clean_empty_results_dirs.sh  clear.sh  commands.txt  compare_env_versions.py  config.py  environment.py  evaluation.py  navigation.py  negotiation.py  pyproject.toml  requirements.txt  smoke_test.py  train.py  train.sh  train_g32.sh  train_g64.sh  update.sh  visualization.py  visualize.py
analysis/: __init__.py  cli.py  compare.py  config.py  metrics_display.py  partition.py  wandb_runs.py
epymarl_config/: requirements_epymarl_gymma.txt  thesslink.yaml  thesslink_v2.yaml
epymarl_config/algs/: coma.yaml  ippo.yaml  maddpg.yaml  mappo.yaml  qmix.yaml  vdn.yaml
epymarl_config/envs/: thesslink.yaml  thesslink_e0_full_v0_g10.yaml  thesslink_e0_w0_full_v1_g10.yaml  thesslink_e0_w0_full_v1_g16.yaml  thesslink_e1_full_v1_g10.yaml  thesslink_e1_w1_full_v1_g10.yaml  thesslink_e1_w1_full_v1_g16.yaml  thesslink_e2_full_v2_g10.yaml  thesslink_e2_full_v2_g32.yaml  thesslink_e2_w2_full_v1_g10.yaml  thesslink_e2_w2_full_v1_g16.yaml  thesslink_e2_w2_full_v1_g32.yaml  thesslink_e3_full_v5_g32.yaml  thesslink_e3_nav_v3_g32.yaml  thesslink_e3_nav_v4_g32.yaml  thesslink_e3_nav_v6_g32.yaml  thesslink_e3_nav_v7_g32.yaml  thesslink_e3_neg_v3_g32.yaml  thesslink_e3_neg_v4_g32.yaml  thesslink_e3_neg_v6_g32.yaml  thesslink_v1.yaml  (+29 more)
models/: taxi.yaml
scripts/: clean_empty_results_dirs.py
thesslink_rl/: __init__.py  checkpoints.py  constants.py  env_catalog.py  environment.py  evaluation.py  gym_wrapper.py  negotiation.py  visualization.py
(+987 files in other folders)
